src/test/deca/syntax/valid/provided/decla.deca
{
  int x = 1;
  int y = 2;
  int z = 2;
  println(x*x*x*x*x*z - y*z);
}
	
