src/test/deca/syntax/invalid/provided/perso/semi_manquante.deca
{
    int x = 10
    int y = 20; // Erreur : point-virgule manquant après x
}
